@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.2.15-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-02-15 13:39:25, took 00:10:39, with 60 workers, on 534 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2024-02-15 14:44:54, took 00:07:24, with 60 workers, on 534 cases, 0 failed, 0 traces, 3 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
