@@ -15706,3 +15706,6 @@ qc pass: dhcp with excluded address
 ---------------------------------- 2024-02-15 13:12:20 24.2.15
 no qc pass: dhcp with excluded address
 failed: dhcp with excluded address
+---------------------------------- 2024-02-15 14:00:11 24.2.15
+no failed: dhcp with excluded address
+qc pass: dhcp with excluded address
